# ChangeLog for dev-games/snesfilter
# Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*snesfilter-0.008 (07 Jan 2010)

  07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +snesfilter-0.008.ebuild:
  Bumped.

  26 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> snesfilter-0.006.ebuild,
  snesfilter-0.007.ebuild:
  Fixed whitespace.

  21 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> -snesfilter-0.004.ebuild,
  -snesfilter-0.005.ebuild:
  Removed cruft.

  09 Dec 2009; Michał Ziąbkowski <mziab@o2.pl> +snesfilter-0.007.ebuild:
  Bumped.

  23 Nov 2009; Michał Ziąbkowski <mziab@o2.pl> +snesfilter-0.006.ebuild:
  Bumped.

  23 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> +snesfilter-0.005.ebuild:
  Bumped.

  18 Oct 2009; Michał Ziąbkowski <mziab@o2.pl> +snesfilter-0.004.ebuild:
  New ebuild.
