@@ -1,8 +1,8 @@
 DIST snesfilter_v006.tar.bz2 87050 RMD160 e4916365ebf602e735298f8fcab96045b7d7f728 SHA1 ed635c7a6529f3760d9e183bbb76ed87305497a3 SHA256 6a6cb4fcac884c093f25a3bdfe7f06f93c992a4ece8a4947800c7640d95ac559
 DIST snesfilter_v007.tar.bz2 49103 RMD160 330c0476557674c254a391c8a5661ac514336138 SHA1 4cdca3f9ffb86bd8b37fa38a197cc073506a210a SHA256 a7f7896749bc8457d76da8560a8f3b4263d9b2a3bacf6f747df1840d46ebcd3c
 DIST snesfilter_v008.tar.bz2 49430 RMD160 e80356fd9da289c80f33233195ebf248f36e3673 SHA1 3f03ee2fb8de32efe60e340822d71a6e786eebb5 SHA256 6e4eb87ae65a11fd26789524656b67ed2a9fffa31874e05a4d0218d90071dfe6
-EBUILD snesfilter-0.006.ebuild 709 RMD160 acb0aaaf8fd664b4d0852098198304a29d6447df SHA1 8f15eb3de35a01b73f0fd596ac4a01ca90dcf1f3 SHA256 0f2e58235e8197bf3370195d7310dba412912b71f9167f5eb3b5bae05f6a6a51
-EBUILD snesfilter-0.007.ebuild 709 RMD160 acb0aaaf8fd664b4d0852098198304a29d6447df SHA1 8f15eb3de35a01b73f0fd596ac4a01ca90dcf1f3 SHA256 0f2e58235e8197bf3370195d7310dba412912b71f9167f5eb3b5bae05f6a6a51
-EBUILD snesfilter-0.008.ebuild 709 RMD160 acb0aaaf8fd664b4d0852098198304a29d6447df SHA1 8f15eb3de35a01b73f0fd596ac4a01ca90dcf1f3 SHA256 0f2e58235e8197bf3370195d7310dba412912b71f9167f5eb3b5bae05f6a6a51
-MISC ChangeLog 831 RMD160 6274847d23e672aaa999db379853f13199e3c4e5 SHA1 5fd1244984aab4f43c93b39c3dcb28ebf7f9767b SHA256 980115b7183c4ef118a537b87a2376957f28bd1b3feda3b02e7a65d0d6ff0d5f
+EBUILD snesfilter-0.006.ebuild 710 RMD160 aff607fb77a3e48c49a740b2f3ffd46abb7d052c SHA1 d6e5baeffffda86455409882d693a854aa4bbc6b SHA256 8377fe24c28d5cbd5f7ae5f41cd83498d5867ead3c828d86efe56969ec91416d
+EBUILD snesfilter-0.007.ebuild 710 RMD160 aff607fb77a3e48c49a740b2f3ffd46abb7d052c SHA1 d6e5baeffffda86455409882d693a854aa4bbc6b SHA256 8377fe24c28d5cbd5f7ae5f41cd83498d5867ead3c828d86efe56969ec91416d
+EBUILD snesfilter-0.008.ebuild 710 RMD160 aff607fb77a3e48c49a740b2f3ffd46abb7d052c SHA1 d6e5baeffffda86455409882d693a854aa4bbc6b SHA256 8377fe24c28d5cbd5f7ae5f41cd83498d5867ead3c828d86efe56969ec91416d
+MISC ChangeLog 993 RMD160 102c4f88f92aad060f0435a6338eeb995f1aca32 SHA1 4c6db187289f74cf592eedae5a153962af69bc1f SHA256 368dd8c30faa66e1c8ff05f1c173097b9759d0cefb727514339257018f6a9fe1
 MISC metadata.xml 244 RMD160 fcdb1f5f93ea0a45207aa3ba4ec6cacbe527c0db SHA1 37fa1906c0e0ec9e8ee54787a8b97c1b23270f04 SHA256 e9d24a79e73b4d1d8577b7e887e96a818c4b807ed590c9b83de26cd30e0f0d3a
