@@ -34,5 +34,5 @@ src_compile() {
 }
 
 src_install() {
-	dolib libsnesfilter.* || die "install failed"
+	dolib libsnesfilter.so || die "install failed"
 }
