@@ -2,6 +2,10 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> snesfilter-0.006.ebuild,
+  snesfilter-0.007.ebuild, snesfilter-0.008.ebuild:
+  Remove redundant static version.
+
 *snesfilter-0.008 (07 Jan 2010)
 
   07 Jan 2010; Michał Ziąbkowski <mziab@o2.pl> +snesfilter-0.008.ebuild:
